# algo_univ_backend

./: Makefile  README.md  db.sqlite3  pyproject.toml  script.sh
api/auth/: serializers.py  url.py  view.py
api/submissions/: urls.py
core/: celery.py  settings.py  urls.py
submissions/: admin.py  models.py  serializers.py  views.py
submissions/migrations/: 0001_initial.py  0002_remove_codesubmission_user.py
